2001-09-12  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc: sometimes CWD was not sent after reconnection
	  because of missing set_real_cwd - fix it.

2001-09-10  Alexander V. Lukyanov  <lav@yars.free.net>

	* lftp_rl.c: print * for modified lines in history (like in bash).
	* resource.cc, ftpclass.cc: use retry-530-anonymous as an additional
	  regexp for retry-530.

2001-09-10  Glenn F. Maynard <g_ld@zewt.org>

	* commands.cc, lftp_rl.c, lftp_rl.h: implement history command.

2001-08-28  Alexander V. Lukyanov  <lav@yars.free.net>

	* Resolver.cc: retry with use_fork=false; don't create pipe if
	  use_fork==false.

2001-08-27  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc: (MoveConnectionHere) set home if null.

2001-08-27  Glenn F. Maynard <g_ld@zewt.org>

	* FileSet.cc, FileSet.h, FileAccess.h, CmdExec.cc: remove the FileSet
	  sort stuff.  It's superfluous now.
	* commands.cc: fix a minor UI bug with queue -d.

2001-08-22  Alexander V. Lukyanov  <lav@yars.free.net>

	* FtpListInfo.cc: remove erroneous assert, handle error.
	* ftpclass.cc, ftpclass.h: (home_auto) new member; support ftp:home
	  variable.
	* resource.cc: add ftp:home, update ftp:retry-530.
	* ResMgr.cc: verify default value with supplied validator.

2001-08-20  Alexander V. Lukyanov  <lav@yars.free.net>

	* resource.cc: fixed ftp:ssl-auth validation.
	* ftpclass.cc: improve abort for passive mode - connect data socket
	  if it is not connected yet.

2001-08-16  Wolfram Gloger <Wolfram.Gloger@dent.med.uni-muenchen.de>

	* FileSet.cc: include stdlib.h; use labs instead of abs.

2001-08-15  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc, ResMgr.cc: declare inet_aton if needed.

2001-08-07  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc: fix memory allocation error.

2001-07-30  Alexander V. Lukyanov  <lav@yars.free.net>

	* commands.cc: format queue help at 80 columns.
	* Resolver.cc: little correction for RAND_MAX.