@@ -430,12 +430,12 @@ void Fish::Close()
 void Fish::Send(const char *format,...)
 {
    va_list va;
-   va_start(va,format);
    char *str;
 
    static int max_send=256;
    for(;;)
    {
+      va_start(va,format);
       str=string_alloca(max_send);
       int res=vsnprintf(str,max_send,format,va);
       if(res>=0 && res<max_send)
@@ -445,11 +445,11 @@ void Fish::Send(const char *format,...)
 	 break;
       }
       max_send*=2;
+      va_end(va);
    }
 
    DebugPrint("---> ",str,5);
    send_buf->Put(str);
-   va_end(va);
 }
 
 const char *Fish::shell_encode(const char *string)
