@@ -1,3 +1,8 @@
+2001-10-01  Aaron Schrab <aaron@schrab.com>
+
+	* Fish.cc, Http.cc, commands.cc, log.cc: call va_start multiple
+	  times when needed, fixes powerpc coredumps.
+
 2001-09-12  Alexander V. Lukyanov  <lav@yars.free.net>
 
 	* ftpclass.cc: sometimes CWD was not sent after reconnection
